Usuarios premium + productos owner

--- a/src/views/createProduct.handlebars
+++ b/src/views/createProduct.handlebars
@@ -8,6 +8,7 @@
     Precio: <input type="number" name="price" id="price">
     Stock: <input type="number" name="stock" id="stock">
     Categoria: <input type="text" name="category" id="category">
+    <input type="hidden" name="owner" id="owner" value="{{email}}">
     <input type="submit" value="AÑADIR">
 </form>
 <button onclick="location.href = '/products'">Volver a Productos</button>
