--- a/src/views/currentuser.handlebars
+++ b/src/views/currentuser.handlebars
@@ -4,3 +4,8 @@
 <p>Email: {{email}}</p>
 <p>Edad: {{age}}</p>
 <p>Rol: {{role}}</p>
+<form id="getPremiumForm">
+    <input type="hidden" name="userId" id="userId" value="{{_id}}">
+    <input type="submit" value="Volverse Premium"></input>
+</form>
+<script src="/js/getPremium.js"></script>
