--- a/src/views/deleteProduct.handlebars
+++ b/src/views/deleteProduct.handlebars
@@ -1,5 +1,5 @@
 <h2>Administarador de Productos</h2>
-
+<input type="hidden" name="activeUser" id="activeUser" value="{{email}}">
 <h3>Eliminar Producto</h3>
 <form id="deleteProductForm">
     Id del Producto: <input type="text" name="deleteProductId" id="deleteProductId">
