--- a/src/views/updateProduct.handlebars
+++ b/src/views/updateProduct.handlebars
@@ -1,5 +1,5 @@
 <h2>Administarador de Productos</h2>
-
+<input type="hidden" name="activeUser" id="activeUser" value="{{email}}">
 <h3>Actualizar Producto</h3>
 <form id="updateProductForm">
     Id del Producto: <input type="text" name="updateProductId" id="updateProductId">
@@ -9,6 +9,7 @@
     Precio: <input type="number" name="updatePrice" id="updatePrice">
     Stock: <input type="number" name="updateStock" id="updateStock">
     Categoria: <input type="text" name="updateCategory" id="updateCategory">
+    <input type="hidden" name="owner" id="owner" value="{{email}}">
     <input type="submit" value="ACTUALIZAR">
 </form>
 <button onclick="location.href = '/products'">Volver a Productos</button>
